--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy>=1.25
-folium>=0.20.1
+numpy
+folium
 pandas==2.0.2
 plotly==6.3.0
 psycopg2-binary==2.9.10
@@ -12,3 +12,4 @@ streamlit-plotly-events==0.0.6
 supabase
 
 sqlalchemy
+
